# chaotic-shop

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
chaotic_shop/: __init__.py  product_page.py  style.py
core/: __init__.py  names.py  skeleton.py
public/assets/: styles.css
src/chaotic_shop/: __init__.py  product_page.py
src/core/: __init__.py  names.py  skeleton.py
tests/: test_core.py  test_skeleton.py
